--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: elixir
+sudo: false
+
 elixir:
   - 1.2.4
+
+addons:
+  postgresql: "9.4"
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - export DATABASE_URL='postgres://postgres@localhost:5432/travis_ci_test'
