--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ elixir:
 addons:
   postgresql: "9.4"
 
+install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - export DATABASE_URL='postgres://postgres@localhost:5432/travis_ci_test'
