--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - . $HOME/.nvm/nvm.sh
   - nvm install v5.10.0
   - nvm use v5.10.0
+  - npm install -g gulp bower
 
 before_script:
   - mix local.hex --force
